--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
     "webpack": "^3.2.0"
   }
 }
