--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.2.0"
   }
