--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
   "scripts": {
     "build": "webpack",
     "p": "webpack --progress --color --watch",
-    "s": "webpack-dev-server"
+    "b": "webpack --progress --color",
+    "s": "webpack-dev-server --progress --color -d --hot"
   },
   "author": "igoist",
   "license": "UNLICENSED",
   "dependencies": {
-    "element-react": "^1.0.18",
-    "element-theme-default": "^1.3.7",
-    "lodash": "^4.17.4"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
-    "webpack": "^3.2.0",
+    "webpack": "3.2.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.5.1"
   }
